# simple-nlp

./: .gitignore  CMakeLists.txt  LICENSE  OUTPUT.md  README.md  nlp.py
cmake/: NLPSentimentConfig.cmake.in
examples/: CMakeLists.txt  file_analyzer.cpp  run_pipeline.cpp  simple_sentiment.cpp  word_cloud.cpp
include/: ascii_word_cloud.h  classifier_model.h  model_evaluator.h  sentiment_analysis.h  sentiment_dataset.h  sgd_classifier.h  text_preprocessor.h  tfidf_vectorizer.h
src/: CMakeLists.txt  ascii_word_cloud.cpp  model_evaluator.cpp  nlp_main.cpp  sentiment_analyzer.cpp  sentiment_dataset.cpp  sgd_classifier.cpp  test_compile.cpp  text_preprocessor.cpp  tfidf_vectorizer.cpp
tests/: model_evaluator_test.cpp  nlp_tests.cpp  sentiment_analyzer_test.cpp  sgd_classifier_test.cpp  text_preprocessor_test.cpp  tfidf_vectorizer_test.cpp
